Created basic syntax highlighting. Primitives are orange, strings are green.

--- a/src/main/resources/codinginterface/codearea.html
+++ b/src/main/resources/codinginterface/codearea.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="codearea.css" media="screen"/>
+    <script src="jquery.js"></script>
     <title>CodingInterface</title>
 </head>
 <body>
-    <div contenteditable="true" id="code-area">
-
-    </div>
+    <div contenteditable="plaintext-only" id="code-area"></div>
     <script src="syntaxhighlight.js" type="text/javascript"></script>
 </body>
 </html>
