--- a/src/main/resources/codinginterface/codearea.html
+++ b/src/main/resources/codinginterface/codearea.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="codearea.css" media="screen"/>
-    <script src="jquery.js"></script>
     <title>CodingInterface</title>
+    <meta charset="UTF-8">
+    <script src="jquery.js"></script>
+    <script src="codemirror-5.65.3/lib/codemirror.js"></script>
+    <script src="codemirror-5.65.3/mode/javascript/javascript.js"></script>
+    <script src="codemirror-5.65.3/addon/mode/simple.js"></script>
+    <link rel="stylesheet" href="codemirror-5.65.3/lib/codemirror.css">
+    <link rel="stylesheet" href="barista-style.css">
 </head>
 <body>
-    <div contenteditable="plaintext-only" id="code-area"></div>
-    <script src="syntaxhighlight.js" type="text/javascript"></script>
+    <textarea id="codeArea"></textarea>
+    <script src="syntaxhighlight.js"></script>
 </body>
 </html>
